# cd-010-github-actions-cicd

./: .coverage  .gitignore   CHANGELOG.md  Dockerfile  Makefile  README.md  cliff.toml  pyproject.toml  requirements-dev.txt  requirements.txt  walkthrough-cicd-architecture.html
.github/: dependabot.yml
.github/actions/docker-build/: action.yml
.github/actions/notify-slack/: action.yml
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  deploy.yml  matrix-test.yml  release.yml  reusable-deploy-k8s.yml  reusable-docker-build.yml  reusable-notify.yml
arc/: runner-deployment.yaml
helm/cd010-app/: Chart.yaml  values-production.yaml  values-staging.yaml  values.yaml
helm/cd010-app/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
scripts/: generate-token.py  verify-setup.sh
src/app/: main.py
terraform/oidc-role/: main.tf  outputs.tf  variables.tf
tests/integration/: test_api.py
tests/unit/: test_main.py
